--- a/MyBroker/auth/views/admin/useradmin/tableUserAccounts.ejs
+++ b/MyBroker/auth/views/admin/useradmin/tableUserAccounts.ejs
@@ -1,8 +1,10 @@
        <table id="userAccountsTable" class="fullwidth">
           <tbody>
             <tr>
-              <th>Accounts</th>
-              
+              <th colspan=7>Accounts</th>
+            </tr>
+            <tr>
+              <td>Profile</td><td>Value</td><td>Cash</td><td>Add</td><td>Draw</td><td>Close</td><td>Rebalance</td>
             </tr>
           </tbody>
        </table>
