--- a/MyBroker/auth/views/stylesheets/adminstyle.ejs
+++ b/MyBroker/auth/views/stylesheets/adminstyle.ejs
@@ -103,6 +103,32 @@
                	   margin: 0;
                	   z-index: -1;
       			 }
+      			 
+      			 
+	  .userList { grid-area: main; 
+               		 background-color: black; 
+    			     text-transform: uppercase;
+               		 color: yellow; 
+               		 text-align: center; 
+               		 margin: 0;
+      			   }
+      .newUser { grid-area: main; 
+               		background-color: grey;
+          			text-transform: uppercase;
+               		color: yellow; 
+               		text-align: center; 
+               		margin: 0;
+               		z-index: -1; 
+      			  }        
+      
+      .accountId { background-color: orange;
+                   text-align: center;
+                 } 
+      
+      #editUser,#deleteUser,#rebalanceUser {
+          background-color:black;
+          border-color:black;
+      }      							 
 /* JQuery UI - the only way I found to get the dialog on top! Damned */
 /*      .ui-dialog { z-index: 1000 !important ;}   */
       
